k8s/traefik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.thepi.cloud`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  tls:
    - secretName: whoami-tls
      hosts:
        - whoami.thepi.cloud
  rules:
    - host: whoami.thepi.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
